--- a/.vitepress/theme/styles/layout.postcss
+++ b/.vitepress/theme/styles/layout.postcss
@@ -1,19 +1,3 @@
-*::-webkit-scrollbar {
-  @apply bg-transparent w-6px h-6px;
-}
-
-*::-webkit-scrollbar-thumb {
-  transition: background 0.2s ease-in-out;
-  @apply bg-transparent rounded-full;
-}
-
-*::-webkit-scrollbar-corner {
-  @apply bg-transparent;
-}
-
-*:hover > ::-webkit-scrollbar-thumb {
-  @apply bg-$c-scrollbar;
-}
 
 html {
   overflow-y: scroll;
@@ -24,15 +8,13 @@ html {
 }
 
 body {
-  @apply bg-light-600 dark_(bg-dark-600) transition-all duration-600 ease-out;
-  width: 100%;
+  @apply bg-light-600 dark_(bg-dark-600) transition-all duration-600 ease-out text-dark-50 dark_text-light-300 ;
   min-width: 320px;
   min-height: 100vh;
   line-height: 1.4;
   font-family: var(--font-family-base);
   font-size: 18px;
   font-weight: 400;
-  color: var(--c-text);
   direction: ltr;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
