--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -16,7 +16,7 @@
   font-weight: 100;
   src: local(''),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/fonts/Circe-ExtraLight.woff')
+      url('https://touchme.chromatone.center/fonts/Circe-ExtraLight.woff')
       format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -27,7 +27,7 @@
   font-weight: 200;
   src: local(''),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/fonts/Circe-Light.woff')
+      url('https://touchme.chromatone.center/fonts/Circe-Light.woff')
       format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -38,7 +38,7 @@
   font-weight: 400;
   src: local(''),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/fonts/Circe-Regular.woff')
+      url('https://touchme.chromatone.center/fonts/Circe-Regular.woff')
       format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -49,7 +49,7 @@
   font-weight: 600;
   src: local(''),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/fonts/Circe-Bold.woff')
+      url('https://touchme.chromatone.center/fonts/Circe-Bold.woff')
       format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -60,6 +60,6 @@
   font-weight: 800;
   src: local(''),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/fonts/Circe-ExtraBold.woff')
+      url('https://touchme.chromatone.center/fonts/Circe-ExtraBold.woff')
       format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
